--- a/.travis.yml
+++ b/.travis.yml
@@ -1,37 +1,22 @@
 language: python
 
 python:
-  - "2.7"
-  # - "3.4"
+- "2.7"
+compiler: clang
+env:
+- CC="clang" CXX="clang++" LDFLAGS="-fuse-ld=lld"
 
 dist: xenial
 addons:
   apt:
     packages:
       - build-essential
-
-sudo: false
+      - liblapack3
 
 install:
-  - if [[ "$TRAVIS_PYTHON_VERSION" == "2.7" ]]; then
-      wget http://repo.continuum.io/miniconda/Miniconda-latest-Linux-x86_64.sh -O miniconda.sh;
-    else
-      wget http://repo.continuum.io/miniconda/Miniconda3-latest-Linux-x86_64.sh -O miniconda.sh;
-    fi
-  - bash miniconda.sh -b -p $HOME/miniconda
-  - export PATH="$HOME/miniconda/bin:$PATH"
-  - conda config --set always_yes yes --set changeps1 no
-  - conda update -q conda
-  - conda info -a
-
-  - conda create -q -n test-environment python=$TRAVIS_PYTHON_VERSION
-  - source activate test-environment
-  - conda install numpy cython scipy pytest scikit-learn
-  - python setup.py install
-  - source deactivate
-
+  - pip install numpy==1.14.2 cython==0.28.2 pytest==3.5.1 scikit-learn==0.19.1 scipy==1.0.1
 script:
   - pwd
-  - source activate test-environment
+  - python setup.py install
   - cd tsne/tests
   - py.test -s -vv
